fix: #app container overflow

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -16,7 +16,7 @@ body {
 }
 
 #app {
-  @apply w-100vw;
+  @apply w-full;
   @apply flex justify-center items-center;
 }
 
